fixed model & created timetable c

--- a/src/app/core/public-layout/container/container.component.html
+++ b/src/app/core/public-layout/container/container.component.html
@@ -1,1 +1,15 @@
-<p>container works!</p>
+<header>
+    <!-- HEADER -->
+</header>
+<main>
+    <aside>
+        <!-- SIDEBAR -->
+    </aside>
+    <section>
+        <router-outlet></router-outlet>
+        <!-- MAIN CONTENT -->
+    </section>
+</main>
+<footer>
+    <!-- FOOTER -->
+</footer>
