--- a/src/app/module/timetable/timetable.component.html
+++ b/src/app/module/timetable/timetable.component.html
@@ -1,1 +1,45 @@
-<p>timetable works!</p>
+<section class="app-timetable">
+<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="end" dynamicHeight>
+        <mat-tab *ngFor="let Table of TableDataFromAPI" label="{{Table.header}}">
+            <div class="table-content">
+                <table mat-table [dataSource]="Table.data">
+
+                    <!-- Index Column -->
+                    <ng-container matColumnDef="Index">
+                        <th mat-header-cell *matHeaderCellDef> No. </th>
+                        <td mat-cell *matCellDef="let element"> {{element.Index}} </td>
+                    </ng-container>
+
+                    <!-- Date Column -->
+                    <ng-container matColumnDef="Date">
+                        <th mat-header-cell *matHeaderCellDef> Date </th>
+                        <td mat-cell *matCellDef="let element"> {{element.Date}} </td>
+                    </ng-container>
+
+                    <!-- Day Column -->
+                    <ng-container matColumnDef="Day">
+                        <th mat-header-cell *matHeaderCellDef> Day </th>
+                        <td mat-cell *matCellDef="let element"> {{element.Day}} </td>
+                    </ng-container>
+
+                    <!-- Time Column -->
+                    <ng-container matColumnDef="Time">
+                        <th mat-header-cell *matHeaderCellDef> Time </th>
+                        <td mat-cell *matCellDef="let element"> {{element.Time}} </td>
+                    </ng-container>
+
+                    <!-- Subject Column -->
+                    <ng-container matColumnDef="Subject">
+                        <th mat-header-cell *matHeaderCellDef> Subject </th>
+                        <td mat-cell *matCellDef="let element"> {{element.Subject}} </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="TableColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: TableColumns;"></tr>
+                </table>
+            </div>
+        </mat-tab>
+      
+        <mat-tab label="Add Exam Table"> Content 3 </mat-tab>
+    </mat-tab-group>
+</section>
