--- a/src/app/module/timetable/timetable.component.html
+++ b/src/app/module/timetable/timetable.component.html
@@ -40,6 +40,7 @@
             </div>
         </mat-tab>
 
-        <mat-tab label="Add Exam Table"> Content 3 </mat-tab>
+        <mat-tab label="Add Exam Table"> 
+        </mat-tab>
     </mat-tab-group>
 </section>
