--- a/src/app/module/timetable/timetable.component.html
+++ b/src/app/module/timetable/timetable.component.html
@@ -1,5 +1,5 @@
 <section class="app-timetable">
-    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="end" dynamicHeight>
+    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start" dynamicHeight>
         <mat-tab *ngFor="let Table of TableDataFromAPI" label="{{Table.header}}">
             <div class="table-content">
                 <table mat-table class="fot" [dataSource]="Table.data">
@@ -34,6 +34,12 @@
                         <td mat-cell *matCellDef="let element"> {{element.Subject}} </td>
                     </ng-container>
 
+                    <!-- Action Column -->
+                    <ng-container *ngIf="canAccess" matColumnDef="Action">
+                        <th mat-header-cell *matHeaderCellDef> Action </th>
+                        <td mat-cell *matCellDef="let element"> <button>edit</button> </td>
+                    </ng-container>
+
                     <tr mat-header-row *matHeaderRowDef="TableColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: TableColumns;"></tr>
                 </table>
@@ -41,6 +47,9 @@
         </mat-tab>
 
         <mat-tab label="Add Exam Table"> 
+            <ng-template matTabContent>
+                <app-create-timetable></app-create-timetable>
+            </ng-template>
         </mat-tab>
     </mat-tab-group>
 </section>
