--- a/src/app/core/public-layout/container/container.component.html
+++ b/src/app/core/public-layout/container/container.component.html
@@ -3,7 +3,7 @@
 </header>
 <main>
     <aside>
-        <!-- SIDEBAR -->
+        <app-sidebar></app-sidebar>
     </aside>
     <section>
         <router-outlet></router-outlet>
