--- a/src/app/core/public-layout/container/container.component.css
+++ b/src/app/core/public-layout/container/container.component.css
@@ -13,6 +13,8 @@ main{
 aside{
     border-right: 1px solid rgb(194, 194, 194);
     background-color: rgb(237, 237, 237);
+    display: flex;
+    justify-content: flex-end;
 }
 
 section{
