--- a/src/app/module/timetable/create-timetable/create-timetable.component.css
+++ b/src/app/module/timetable/create-timetable/create-timetable.component.css
@@ -4,45 +4,23 @@ form {
   flex-direction: column;
   padding: 20px 10px;
 }
-
 button {
-  font-family: "Poppins", sans-serif;
-  text-transform: uppercase;
-  display: inline-block;
-  border-radius: 4px;
-  background-color: #3d405b;
-  border: none;
-  color: #ffffff;
-  text-align: center;
-  font-size: 17px;
-  padding: 16px;
-  width: 130px;
-  transition: all 0.5s;
+  color: #090909;
+  padding: 0.7em 1.7em;
+  font-size: 18px;
+  width: 100px;
+  margin-top: 10px;
+  border-radius: 0.5em;
+  border: 1px solid rgba(0, 0, 0, 0.7);
+  /* background: #ffffff; */
   cursor: pointer;
-  margin: 5px;
+  border: 1px solid #e8e8e8;
+  transition: all 0.3s;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
 }
 
-button span {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
+button:active {
+  color: #666;
+  box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
 }
 
-button span:after {
-  content: "»";
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -15px;
-  transition: 0.5s;
-}
-
-button:hover span {
-  padding-right: 15px;
-}
-
-button:hover span:after {
-  opacity: 1;
-  right: 0;
-}
