--- a/src/app/module/timetable/timetable.component.html
+++ b/src/app/module/timetable/timetable.component.html
@@ -7,13 +7,13 @@
                     <!-- Index Column -->
                     <ng-container matColumnDef="Index">
                         <th mat-header-cell *matHeaderCellDef> No. </th>
-                        <td mat-cell *matCellDef="let element"> {{element.Index}} </td>
+                        <td mat-cell *matCellDef="let element;index as i"> {{i+1}} </td>
                     </ng-container>
 
                     <!-- Date Column -->
                     <ng-container matColumnDef="Date">
                         <th mat-header-cell *matHeaderCellDef> Date </th>
-                        <td mat-cell *matCellDef="let element"> {{element.Date}} </td>
+                        <td mat-cell *matCellDef="let element"> {{element.Date | date:'mm/d/yyyy'}} </td>
                     </ng-container>
 
                     <!-- Day Column -->
@@ -25,7 +25,7 @@
                     <!-- Time Column -->
                     <ng-container matColumnDef="Time">
                         <th mat-header-cell *matHeaderCellDef> Time </th>
-                        <td mat-cell *matCellDef="let element"> {{element.Time}} </td>
+                        <td mat-cell *matCellDef="let element"> {{element.timeFrom}} - {{element.timeTo}} </td>
                     </ng-container>
 
                     <!-- Subject Column -->
@@ -46,9 +46,9 @@
             </div>
         </mat-tab>
 
-        <mat-tab label="Add Exam Table"> 
+        <mat-tab *ngIf="canAccess" label="Add Exam Table">
             <ng-template matTabContent>
-                <app-create-timetable></app-create-timetable>
+                <app-create-timetable [TableList]="TableList"></app-create-timetable>
             </ng-template>
         </mat-tab>
     </mat-tab-group>
