--- a/src/app/core/public-layout/container/container.component.css
+++ b/src/app/core/public-layout/container/container.component.css
@@ -1,13 +1,13 @@
 
 header{
-    height: 6rem;
+    height: 5rem;
     border-bottom: 1px solid rgb(194, 194, 194);
 }
 
 main{
     display: grid;
-    min-height: calc(100dvh - 6rem);
-    grid-template-columns: 35rem 1fr;
+    min-height: calc(100dvh - 5rem);
+    grid-template-columns: 30% 1fr;
 }
 
 aside{
