--- a/src/app/module/timetable/create-timetable/create-timetable.component.html
+++ b/src/app/module/timetable/create-timetable/create-timetable.component.html
@@ -7,7 +7,7 @@
 
     <mat-form-field class="example-full-width" appearance="outline"> 
         <mat-label>Exam Name</mat-label>
-        <input type="text" placeholder="Pick one" aria-label="Number" matInput formControlName="Exam"
+        <input type="text" placeholder="Select or Add new" aria-label="Number" matInput formControlName="Exam"
             [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete">
             <mat-option *ngFor="let option of TableList;" [value]="option">{{option}}</mat-option>
