--- a/client/src/app/module/attendance/attendance.component.html
+++ b/client/src/app/module/attendance/attendance.component.html
@@ -1,1 +1,12 @@
-<p>attendance works!</p>
+<section class="page">
+    <div class="page-header">
+        <div class="page-title">Attendance</div>
+    </div>
+    <div class="page-body">
+        
+        <div class="box states">
+            <div class="box-title">YOU ARE FUCKING GENIOUSE</div>
+            <div class="box-body">100/100</div>
+        </div>
+    </div>
+</section>
