--- a/client/src/app/core/public-layout/sidebar/sidebar.component.css
+++ b/client/src/app/core/public-layout/sidebar/sidebar.component.css
@@ -1,12 +1,11 @@
 .app-sidebar {
-  margin-right: 20px;
+  padding: 1rem;
 }
 ul{
   padding: 0;
 }
 
 li {
-  margin-top: 10px;
   transition: all 0.4s ease-in-out;
 }
 
