--- a/client/src/app/module/attendance/attendance.component.css
+++ b/client/src/app/module/attendance/attendance.component.css
@@ -4,7 +4,8 @@
 }
 
 .page-header{
-    height: 4rem;
+    padding: 0 1rem;
+    height: 2rem;
     font-size: 1.5rem;
     font-weight: 600;
 }
@@ -12,6 +13,8 @@
     padding: 1rem;
     display: flex;
     flex-wrap: wrap;
+    align-items: baseline;
+    justify-content: baseline;
     gap: 1rem;
 }
 
@@ -28,6 +31,23 @@
     font-weight: 600;
 }
 
-.states{
+.box-body{}
+
+.box-title .small-title{
+    font-size: 1rem;
+    color: #888;
+    font-weight: 300;
+}
+
+.f-100{
+    flex-basis: 100%;
+}
+.f-full{
     flex-grow: 1;
+}
+
+.std-name-list{
+    margin-left: 1rem;
+    text-transform: capitalize;
+    color: #777;
 }
