--- a/client/src/app/module/timetable/timetable.component.html
+++ b/client/src/app/module/timetable/timetable.component.html
@@ -46,10 +46,10 @@
             </div>
         </mat-tab>
 
-        <!-- <mat-tab *ngIf="canAccess" label="Add Exam Table">
+        <mat-tab *ngIf="canAccess" label="Add Exam Table">
             <ng-template matTabContent>
                 <app-create-timetable [TableList]="TableList"></app-create-timetable>
             </ng-template>
-        </mat-tab> -->
+        </mat-tab>
     </mat-tab-group>
 </section>
