bau badhu navu umeryu

--- a/client/src/app/core/public-layout/container/container.component.css
+++ b/client/src/app/core/public-layout/container/container.component.css
@@ -6,7 +6,7 @@ header{
 
 main{
     display: grid;
-    min-height: calc(100dvh - 5rem);
+    min-height: calc(100dvh - 5rem - 1px);
     grid-template-columns: 30% 1fr;
 }
 
