--- a/client/src/app/core/public-layout/sidebar/sidebar.component.html
+++ b/client/src/app/core/public-layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="app-sidebar">
+<section class="app-sidebar">
     <ul>
         <li *ngFor="let app of App">
             <div *ngIf="app.roles.includes(userRole)">
@@ -11,7 +11,7 @@
                 </button>
                 <ul *ngIf="app.isActive">
                     <li *ngFor="let subApp of (app.children)">
-                        <button class="cta" *ngIf="subApp.roles.includes(userRole)" (click)="navigateTo(subApp.url)">
+                        <button class="cta subapp" *ngIf="subApp.roles.includes(userRole)" (click)="navigateTo(subApp)">
                             <span>{{subApp.menu}}</span>
                             <svg width="15px" height="10px" viewBox="0 0 13 10">
                                 <path d="M1,5 L11,5"></path>
@@ -23,4 +23,4 @@
             </div>
         </li>
     </ul>
-</div>
+</section>
