--- a/client/src/app/core/public-layout/sidebar/sidebar.component.css
+++ b/client/src/app/core/public-layout/sidebar/sidebar.component.css
@@ -3,6 +3,7 @@
 }
 ul{
   padding: 0;
+  transition: all 0.4s ease-in-out;
 }
 
 li {
@@ -71,7 +72,10 @@ background-color: white;
   transform: translateX(0);
 }
 
-
+.subapp span{
+  padding-left: 1rem;
+  color: #4c759f;
+}
 
 .cta:active {
   transform: scale(0.95);
