--- a/client/src/app/module/timetable/create-timetable/create-timetable.component.css
+++ b/client/src/app/module/timetable/create-timetable/create-timetable.component.css
@@ -1,27 +1,30 @@
-form {
-  font-family: "Poppins", sans-serif;
-  display: flex;
-  flex-direction: column;
-  padding: 20px 10px;
-}
-button {
-  color: #ffffff;
-  font-weight: 500;
-  padding: 0.7em 1.7em;
-  font-size: 18px;
-  width: 100px;
-  margin-top: 10px;
-  border-radius: 0.5em;
-  border: 1px solid rgba(0, 0, 0, 0.7);
-  background: rgb(75, 75, 172);
-  cursor: pointer;
-  border: 1px solid #e8e8e8;
-  transition: all 0.3s;
-  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+.page{
+    padding: 1rem;
+    width: 80%;
 }
 
-button:active {
-  color: #666;
-  box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+.page-header{
+    padding: 0 1rem;
+    height: 2rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+.page-body,.box-body{
+    padding: 1rem;
 }
 
+.box{
+    padding: 1rem 1.5rem;
+    border-radius: 1.1rem;
+    flex-basis: 70%;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+    background-color: white;
+}
+.box-title{
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+form > *{
+    display: block;
+}
