--- a/client/src/app/module/timetable/create-timetable/create-timetable.component.html
+++ b/client/src/app/module/timetable/create-timetable/create-timetable.component.html
@@ -1,43 +1,52 @@
-<form id="timetable-form" name="create-timetable" (ngSubmit)="Submit()" [formGroup]="timetable.form">
+<section class="page">
+    <div class="page-header">
+        <div class="page-title">Time Table / Add</div>
+    </div>
+    <div class="page-body">
+        <div class="box">
+            <div class="box-title">Create Exam Time Table</div>
+            <div class="box-body">
+                <form id="timetable-form" name="create-timetable" (ngSubmit)="Submit()" [formGroup]="timetable.form">
 
-    <!-- <mat-form-field appearance="outline">
-        <mat-label>Exam Name</mat-label>
-        <input matInput placeholder="eg. Mid Terms" formControlName="Exam">
-    </mat-form-field> -->
+                    <mat-form-field appearance="outline">
+                        <mat-label>Exam Name</mat-label>
+                        <input type="text" placeholder="Select or Add new" aria-label="Number" matInput
+                            formControlName="Exam" [matAutocomplete]="auto">
+                        <mat-autocomplete #auto="matAutocomplete">
+                            <mat-option *ngFor="let option of TableList" [value]="option">{{option}}</mat-option>
+                        </mat-autocomplete>
+                    </mat-form-field>
 
-    <mat-form-field class="example-full-width" appearance="outline"> 
-        <mat-label>Exam Name</mat-label>
-        <input type="text" placeholder="Select or Add new" aria-label="Number" matInput formControlName="Exam"
-            [matAutocomplete]="auto">
-        <mat-autocomplete #auto="matAutocomplete">
-            <mat-option *ngFor="let option of TableList;" [value]="option">{{option}}</mat-option>
-        </mat-autocomplete>
-    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label for="Date">Exam Date</mat-label>
+                        <input matInput [matDatepicker]="Date" formControlName="Date">
+                        <mat-datepicker-toggle matIconSuffix [for]="Date"></mat-datepicker-toggle>
+                        <mat-datepicker #Date></mat-datepicker>
 
-    <mat-form-field  appearance="outline">
-        <mat-label for="Date">Exam Date</mat-label>
-        <input matInput [matDatepicker]="Date" formControlName="Date">
-        <mat-datepicker-toggle matIconSuffix [for]="Date"></mat-datepicker-toggle>
-        <mat-datepicker #Date></mat-datepicker>
-        
-    </mat-form-field>
+                    </mat-form-field>
 
-    <mat-form-field appearance="outline">
-        <mat-label>Subject</mat-label>
-        <input matInput placeholder="eg. Maths" formControlName="Subject">
-    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Subject</mat-label>
+                        <input matInput placeholder="eg. Maths" formControlName="Subject">
+                    </mat-form-field>
 
-    <mat-form-field appearance="outline">
-        <mat-label>Time Start</mat-label>
-        <input matInput placeholder="eg. 9" formControlName="TimeFrom">
-    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Time Start</mat-label>
+                        <input matInput placeholder="eg. 9" formControlName="TimeFrom">
+                    </mat-form-field>
 
-    <mat-form-field appearance="outline">
-        <mat-label>Time End</mat-label>
-        <input matInput placeholder="eg. 11" formControlName="TimeTo">
-    </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Time End</mat-label>
+                        <input matInput placeholder="eg. 11" formControlName="TimeTo">
+                    </mat-form-field>
 
-    <mat-slide-toggle [checked]="timetable.form.controls['isActive'].value" formControlName="isActive">Active</mat-slide-toggle>
+                    <mat-slide-toggle [checked]="timetable.form.controls['isActive'].value"
+                        formControlName="isActive">Active</mat-slide-toggle>
 
-    <button type="submit"><span>Add</span></button>
-</form>
+                    <button type="submit" class="primery-btn">Add</button>
+                </form>
+                <p>{{timetable.form.get('Date')?.value | date:'long'}}</p>
+            </div>
+        </div>
+    </div>
+</section>
