--- a/client/src/app/module/timetable/timetable.component.html
+++ b/client/src/app/module/timetable/timetable.component.html
@@ -8,49 +8,50 @@
                 <mat-tab *ngFor="let Table of TableDataFromAPI" label="{{Table.header}}">
                     <div class="table-content">
                         <table mat-table class="fot" [dataSource]="Table.data">
-            
+
                             <!-- Index Column -->
                             <ng-container matColumnDef="Index">
                                 <th mat-header-cell *matHeaderCellDef> No. </th>
                                 <td mat-cell *matCellDef="let element;index as i"> {{i+1}} </td>
                             </ng-container>
-            
+
                             <!-- Date Column -->
                             <ng-container matColumnDef="Date">
                                 <th mat-header-cell *matHeaderCellDef> Date </th>
-                                <td mat-cell *matCellDef="let element"> {{element.Date | date:'mm/d/yyyy'}} </td>
+                                <td mat-cell *matCellDef="let element"> {{element.Date | date:'dd MMMM, y'}} </td>
                             </ng-container>
-            
+
                             <!-- Day Column -->
                             <ng-container matColumnDef="Day">
                                 <th mat-header-cell *matHeaderCellDef> Day </th>
-                                <td mat-cell *matCellDef="let element"> {{element.Day}} </td>
+                                <td mat-cell *matCellDef="let element"> {{moment(element.Date).format('dddd')}} </td>
                             </ng-container>
-            
+
                             <!-- Time Column -->
                             <ng-container matColumnDef="Time">
                                 <th mat-header-cell *matHeaderCellDef> Time </th>
                                 <td mat-cell *matCellDef="let element"> {{element.timeFrom}} - {{element.timeTo}} </td>
                             </ng-container>
-            
+
                             <!-- Subject Column -->
                             <ng-container matColumnDef="Subject">
                                 <th mat-header-cell *matHeaderCellDef> Subject </th>
                                 <td mat-cell *matCellDef="let element"> {{element.Subject}} </td>
                             </ng-container>
-            
+
                             <!-- Action Column -->
                             <ng-container *ngIf="canAccess" matColumnDef="Action">
                                 <th mat-header-cell *matHeaderCellDef> Action </th>
-                                <td mat-cell *matCellDef="let element"> <button>edit</button> </td>
+                                <td mat-cell *matCellDef="let element"> <button class="primery-btn bg-s">edit</button>
+                                </td>
                             </ng-container>
-            
+
                             <tr mat-header-row *matHeaderRowDef="TableColumns"></tr>
                             <tr mat-row *matRowDef="let row; columns: TableColumns;"></tr>
                         </table>
                     </div>
                 </mat-tab>
-            
+
                 <!-- <mat-tab *ngIf="canAccess" label="Add Exam Table">
                         <ng-template matTabContent>
                             <app-create-timetable [TableList]="TableList"></app-create-timetable>
