--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -18,13 +18,19 @@ li {
   list-style: none;
 }
 
+
+:root {
+  --primery-color: #234567;
+}
+
+
 /* global component css */
 .primery-btn {
   all: unset;
   padding: 10px 16px;
   height: fit-content;
   background-color: #b1dae7;
-  color: #234567;
+  color: var(--primery-color);
   font-weight: 700;
   border-radius: 22px;
   transition: all 0.2s ease;
@@ -36,6 +42,56 @@ li {
   transform: scale(0.95);
 }
 
-.bg-s{
-    background-color: transparent;
+.bg-s {
+  background-color: transparent;
+}
+
+.page {
+  padding: 1rem;
+  max-width: 80%;
+}
+
+.page-header {
+  padding: 0 1rem;
+  height: 2rem;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.page-body {
+  padding: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+  justify-content: baseline;
+  gap: 1rem;
+}
+
+.box {
+  padding: 1rem 1.5rem;
+  width: fit-content;
+  border-radius: 1.1rem;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+  background-color: white;
+}
+
+.box-title {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.box-body {
+}
+
+.box-title .small-title {
+  font-size: 1rem;
+  color: #888;
+  font-weight: 300;
+}
+
+.f-100 {
+  flex-basis: 100%;
+}
+.f-full {
+  flex-grow: 1;
 }
