--- a/client/src/app/module/standard/standard.component.html
+++ b/client/src/app/module/standard/standard.component.html
@@ -11,6 +11,7 @@
             <div class="list-class" *ngFor="let class of Standards">
                 <app-standard-card [class]="class"></app-standard-card>
             </div>
+            <app-create-standard *ngIf="role == 0"></app-create-standard>
         </div>
     </div>
 </section>
