enrolling done standard page complete

--- a/client/src/app/module/profile/profile.component.html
+++ b/client/src/app/module/profile/profile.component.html
@@ -1,1 +1,18 @@
-<p>profile works!</p>
+<section>
+    <ng-container *ngIf="role == Users.Student">
+        <app-student></app-student>
+    </ng-container>
+
+    <ng-container *ngIf="role == Users.Faculty">
+        <app-faculty></app-faculty>
+    </ng-container>
+
+    <ng-container *ngIf="role == Users.Parents">
+        <app-student></app-student>
+    </ng-container>
+
+    <ng-container *ngIf="role == Users.Admin">
+        <app-school></app-school>
+    </ng-container>
+
+</section>
