--- a/client/src/app/module/standard/standard-card/standard-card.component.html
+++ b/client/src/app/module/standard/standard-card/standard-card.component.html
@@ -1,4 +1,4 @@
-<article class="box">
+<article class="box" (click)="navigate(class.id)">
     <h3>{{class.name}}<sup>th</sup></h3>
     <p>{{class.div}}</p>
 </article>
