--- a/client/src/app/module/profile/student/student.component.html
+++ b/client/src/app/module/profile/student/student.component.html
@@ -1,1 +1,13 @@
-<p>student works!</p>
+<section class="page">
+    <div class="page-header">
+        <div class="page-title">Your Profile</div>
+    </div>
+    <div class="page-body">
+        <div class="box">
+            <div class="box-title">Kushagra Gangwal</div>
+        </div>
+        <div class="box">
+            221SBEIT30007
+        </div>
+    </div>
+</section>
