--- a/client/src/app/module/timetable/create-timetable/create-timetable.component.css
+++ b/client/src/app/module/timetable/create-timetable/create-timetable.component.css
@@ -1,30 +1,23 @@
-.page{
-    padding: 1rem;
-    width: 80%;
+form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 1rem;
+  align-items: center;
 }
 
-.page-header{
-    padding: 0 1rem;
-    height: 2rem;
-    font-size: 1.5rem;
-    font-weight: 600;
-}
-.page-body,.box-body{
-    padding: 1rem;
+.box-body {
+  padding: 1rem;
+  padding-bottom: 0;
 }
 
-.box{
-    padding: 1rem 1.5rem;
-    border-radius: 1.1rem;
-    flex-basis: 70%;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
-    background-color: white;
-}
-.box-title{
-    font-size: 1.2rem;
-    font-weight: 600;
+.subject {
+  grid-area: 2/1/3/3;
 }
 
-form > *{
-    display: block;
+.primery-btn{
+    justify-self: start;
+}
+
+.isActive{
+    justify-self: end;
 }
