--- a/client/src/app/module/standard/standard.component.html
+++ b/client/src/app/module/standard/standard.component.html
@@ -6,6 +6,9 @@
         <div class="box small-title ">
             <p class="box-body">Your are currently enrolled into these classes</p>
         </div>
+        <div class="f-100">
+            <mat-divider></mat-divider>
+        </div>
         <app-standard-list [role]="role"></app-standard-list>
     </div>
 </section>
