--- a/client/src/app/module/enroll/list-users/list-users.component.html
+++ b/client/src/app/module/enroll/list-users/list-users.component.html
@@ -1,6 +1,8 @@
 <li>
-    <i class="bi bi-person-x"></i>
-    <p>#ABC94853 </p>
+    <i *ngIf="user.IsActive" class="bi bi-person-check"></i>
+    <i *ngIf="!user.IsActive" class="bi bi-person-x"></i>
+    <p> {{user.UserName}} </p>
+    <p *ngIf="user.IsActive"> {{user.FirstName }} {{user.LastName }}</p>
     <!-- <i class="bi bi-box-arrow-up-right"></i> -->
     <i class="action bi bi-arrow-up-right" (click)="openProfile()"></i>
     <i class="action bi bi-trash3"></i>
