--- a/client/src/app/module/timetable/create-timetable/create-timetable.component.html
+++ b/client/src/app/module/timetable/create-timetable/create-timetable.component.html
@@ -1,6 +1,6 @@
 <section class="page">
     <div class="page-header">
-        <div class="page-title">Time Table / Add</div>
+        <div class="page-title">Time Table <i class="bi bi-slash-lg"></i> Add</div>
     </div>
     <div class="page-body">
         <div class="box">
@@ -26,27 +26,30 @@
                         <mat-datepicker #Date></mat-datepicker>
 
                     </mat-form-field>
-                    
+
                     <mat-form-field class="subject" appearance="outline">
                         <mat-label>Subject</mat-label>
                         <input matInput placeholder="eg. Maths" formControlName="Subject">
                     </mat-form-field>
-                    
+
                     <mat-form-field appearance="outline">
                         <mat-label>Time Start</mat-label>
                         <input matInput placeholder="eg. 9" formControlName="TimeFrom">
                     </mat-form-field>
-                    
+
                     <mat-form-field appearance="outline">
                         <mat-label>Time End</mat-label>
                         <input matInput placeholder="eg. 11" formControlName="TimeTo">
                     </mat-form-field>
-                    
-                    <mat-slide-toggle class="isActive" [checked]="timetable.form.controls['IsActive'].value"
-                    formControlName="IsActive">Active</mat-slide-toggle>
-                     
 
-                    <button type="submit" class="primery-btn">Add</button> 
+                    <mat-slide-toggle class="isActive" [color]="'primery'"
+                        [checked]="timetable.form.controls['IsActive'].value"
+                        formControlName="IsActive">Active</mat-slide-toggle>
+
+                    <button type="submit" class="primery-btn">
+                        {{!isLoading ? 'Add': ''}}
+                        <mat-spinner *ngIf="isLoading"></mat-spinner>
+                    </button>
                 </form>
             </div>
         </div>
