--- a/client/src/app/core/public-layout/header/header.component.html
+++ b/client/src/app/core/public-layout/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
     <h2>classDesigner <span>vidhyanagri</span></h2>
     <p>{{userName}}
-        <span class="primery-btn">
+        <span class="primery-btn" (click)="logout()">
             <ng-icon class=" user" name="bootstrapPerson"></ng-icon>
         </span>
     </p>
