--- a/client/src/app/core/public-layout/sidebar/sidebar.component.css
+++ b/client/src/app/core/public-layout/sidebar/sidebar.component.css
@@ -1,7 +1,10 @@
 .app-sidebar {
-  padding: 1rem;
+  /* padding: 1rem; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
-ul{
+ul {
   padding: 0;
   transition: all 0.4s ease-in-out;
 }
@@ -10,9 +13,8 @@ li {
   transition: all 0.4s ease-in-out;
 }
 
-li > ul{
-  margin-top: 5px !important;
-  margin-left: 20px;
+li div ul {
+  animation: fadeIn 0.3s ease-in-out;
 }
 
 .cta {
@@ -25,6 +27,11 @@ li > ul{
   border: none;
   background: none;
   cursor: pointer;
+}
+
+.icon{
+  scale: 1.6;
+
 }
 
 .cta:before {
@@ -63,16 +70,16 @@ li > ul{
 }
 
 .active:before {
-    opacity: 1;
+  opacity: 1;
   width: 100%;
-background-color: white;
+  background-color: white;
 }
 
 .cta:hover svg {
   transform: translateX(0);
 }
 
-.subapp span{
+.subapp span {
   padding-left: 1rem;
   color: #4c759f;
 }
@@ -81,7 +88,12 @@ background-color: white;
   transform: scale(0.95);
 }
 
-.active:before{
-    width: 100%;
-    background-color: #b1dae7;
+.active:before {
+  width: 100%;
+  background-color: #b1dae7;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; translate: 0 -10px; }
+  100% { opacity: 1; translate: 0;}
 }
