--- a/client/src/app/module/subject/subject.component.html
+++ b/client/src/app/module/subject/subject.component.html
@@ -18,7 +18,7 @@
                                 <i class="bi bi-journals"></i> &nbsp; {{subject.Name}}
                             </mat-panel-title>
                             <mat-panel-description>
-                                {{subject.faculty.name}}
+                                Teacher : {{subject.faculty.name | titlecase}}
                             </mat-panel-description>
                         </mat-expansion-panel-header>
                         <div class="edit-container">
