--- a/client/src/app/core/public-layout/header/header.component.css
+++ b/client/src/app/core/public-layout/header/header.component.css
@@ -1,7 +1,8 @@
 .header {
   height: 100%;
   display: flex;
-  justify-content: space-around;
+  padding: 2rem;
+  justify-content: space-between;
   align-items: center;
 }
 
