--- a/client/src/app/module/profile/student/student.component.html
+++ b/client/src/app/module/profile/student/student.component.html
@@ -58,6 +58,16 @@
                     <input matInput formControlName="Gender">
                 </mat-form-field>
 
+                <mat-form-field appearance="outline">
+                    <mat-label>Address</mat-label>
+                    <input matInput formControlName="Address">
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Medium</mat-label>
+                    <input matInput formControlName="Medium">
+                </mat-form-field>
+
                 <button class="primery-btn">
                     {{!isLoading ? 'Save': ''}}
                     <mat-spinner *ngIf="isLoading"></mat-spinner>
